--- a/style.css
+++ b/style.css
@@ -6,8 +6,12 @@ body{
 }
 .principal {
 	background: #CCCCCC;
+	padding: 30px;
 }
-h1 {
+.titulo-principal {
+	padding-left: 20px;
+}
+.titulo-centralizado {
 	text-align: center;
 }
 p {
@@ -28,7 +32,15 @@ em strong {
 
 .beneficios {
 	background-color: white;
+	padding: 20px;
 }
-h2 {
-	text-align: center;
+
+ul {
+	display: inline-block;
+	vertical-align: top;
+	width: 20%;
+	margin-right: 15%;
+}
+.imagemBeneficios {
+	width: 50%;
 }
